feat(api): added endpoint for querying item list
